--- a/app/src/main/res/layout/activity_bierpopup.xml
+++ b/app/src/main/res/layout/activity_bierpopup.xml
@@ -11,20 +11,67 @@
         android:id="@+id/hitButton"
         android:layout_width="170dp"
         android:layout_height="170dp"
-        android:layout_marginStart="384dp"
-        android:layout_marginTop="184dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="44dp"
         android:onClick="hit"
         android:text="Raak!"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tik hier hoe vaak je raak hebt gegooid. Na 5 minuten worden de niet gegooide dopjes als gemist beschouwd. "
+        android:layout_marginTop="40dp"
+        android:text="Tik hier hoe vaak je raak hebt gegooid. Na 2 minuten worden de niet gegooide dopjes als gemist beschouwd. "
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="109dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/missButton"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="44dp"
+        android:onClick="mis"
+        android:text="Mis!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintStart_toEndOf="@+id/hitButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/raamButton"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
+        android:onClick="uithetRaam"
+        android:text="Uit het raam!"
+        app:layout_constraintStart_toEndOf="@+id/missButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/bierTeGooienText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/missButton" />
+
+    <Button
+        android:id="@+id/deRestMis"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="44dp"
+        android:onClick="allesMis"
+        android:text="De rest mis"
+        app:layout_constraintStart_toEndOf="@+id/raamButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
