--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,12 @@
         android:id="@+id/bierText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="24dp"
         android:text="Bier strepen"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bierlijstBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/statistiekenBtn" />
 
     <ImageButton
         android:id="@+id/statistiekenBtn"
@@ -68,4 +68,28 @@
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/bierText"
         app:layout_constraintTop_toBottomOf="@+id/statistiekenBtn" />
+
+    <ImageButton
+        android:id="@+id/editBewonersBtn"
+        android:layout_width="89dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#00FFFFFF"
+        android:onClick="startEditBewoners"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.868"
+        app:layout_constraintStart_toEndOf="@+id/titleBierlijst"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/bewonersText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="Bewoners"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/editBewonersBtn"
+        app:layout_constraintTop_toBottomOf="@+id/editBewonersBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
