--- a/app/src/main/res/layout/activity_bierpopup.xml
+++ b/app/src/main/res/layout/activity_bierpopup.xml
@@ -74,4 +74,15 @@
         android:text="De rest mis"
         app:layout_constraintStart_toEndOf="@+id/raamButton"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/bierTeGooienTijd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/bierTeGooienText"
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toStartOf="@+id/bierTeGooienText"
+        app:layout_constraintTop_toBottomOf="@+id/bierTeGooienText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
