--- a/app/src/main/res/layout/activity_statistieken.xml
+++ b/app/src/main/res/layout/activity_statistieken.xml
@@ -42,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="  Thijs  "
+                android:textAlignment="center"
                 android:textSize="24sp" />
 
             <TextView
@@ -49,20 +50,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="  Sven  "
+                android:textAlignment="center"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Etienne"
+                android:text="  Etienne  "
+                android:textAlignment="center"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rowin"
+                android:text="  Rowin  "
+                android:textAlignment="center"
                 android:textSize="24sp" />
 
             <TextView
@@ -70,13 +74,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="vG"
+                android:textAlignment="center"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Totaal te geven"
+                android:text="  Totaal te geven"
                 android:textSize="24sp" />
         </TableRow>
 
