--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:layout_height="76dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="#00FFFFFF"
-        android:onClick="startEditBewoners"
+        android:longClickable="true"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.868"
