--- a/app/src/main/res/layout/activity_bierlijst.xml
+++ b/app/src/main/res/layout/activity_bierlijst.xml
@@ -11,10 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Ha! Bier"
+        android:text="Bier!"
+        android:textAlignment="center"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,6 +52,7 @@
         android:layout_height="40dp"
         android:onClick="substractSven"
         app:layout_constraintEnd_toStartOf="@+id/editTextSven"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/IG_Sven"
         app:layout_constraintTop_toTopOf="@+id/editTextSven"
         app:srcCompat="@android:drawable/button_onoff_indicator_on" />
@@ -104,8 +106,8 @@
         android:layout_height="40dp"
         android:onClick="addThijs"
         app:layout_constraintEnd_toEndOf="@+id/IG_Thijs"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:layout_editor_absoluteY="250dp" />
+        app:layout_constraintTop_toTopOf="@+id/substractThijs"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <ImageButton
         android:id="@+id/addSven"
@@ -125,6 +127,7 @@
         android:onClick="thijsBier"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/IG_Sven"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/IG_Sven"
         app:srcCompat="@mipmap/ic_thijs" />
@@ -154,7 +157,7 @@
         android:ems="10"
         android:inputType="numberSigned"
         app:layout_constraintStart_toEndOf="@+id/substractEtienne"
-        tools:layout_editor_absoluteY="250dp" />
+        app:layout_constraintTop_toTopOf="@+id/substractEtienne" />
 
     <ImageButton
         android:id="@+id/substractEtienne"
@@ -162,8 +165,8 @@
         android:layout_height="40dp"
         android:onClick="substractEtienne"
         app:layout_constraintStart_toStartOf="@+id/IG_Etienne"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on"
-        tools:layout_editor_absoluteY="250dp" />
+        app:layout_constraintTop_toBottomOf="@+id/IG_Etienne"
+        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
     <TextView
         android:id="@+id/tindersbgeven"
@@ -181,8 +184,8 @@
         android:onClick="addEtienne"
         app:layout_constraintEnd_toEndOf="@+id/IG_Etienne"
         app:layout_constraintStart_toEndOf="@+id/editTextEtienne"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:layout_editor_absoluteY="250dp" />
+        app:layout_constraintTop_toTopOf="@+id/substractEtienne"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <ImageButton
         android:id="@+id/IG_Sven"
@@ -231,8 +234,9 @@
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="numberSigned"
-        app:layout_constraintTop_toBottomOf="@+id/IG_Sven"
-        tools:layout_editor_absoluteX="441dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IG_Sven" />
 
     <EditText
         android:id="@+id/editTextThijs"
@@ -242,7 +246,7 @@
         android:inputType="numberSigned"
         app:layout_constraintEnd_toStartOf="@+id/addThijs"
         app:layout_constraintStart_toEndOf="@+id/substractThijs"
-        tools:layout_editor_absoluteY="250dp"
+        app:layout_constraintTop_toTopOf="@+id/substractThijs"
         tools:text="0" />
 
     <ImageButton
@@ -301,8 +305,8 @@
         android:layout_height="40dp"
         android:onClick="substractThijs"
         app:layout_constraintStart_toStartOf="@+id/IG_Thijs"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on"
-        tools:layout_editor_absoluteY="250dp" />
+        app:layout_constraintTop_toBottomOf="@+id/IG_Thijs"
+        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
     <ImageButton
         android:id="@+id/IG_nonMM"
