--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:backgroundTint="#00FFFFFF"
         android:onClick="startBierlijst"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_beer"
+        android:src="@drawable/beer512"
         android:tint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bierlijstBtn"
         app:layout_constraintTop_toTopOf="@+id/bierlijstBtn"
-        app:srcCompat="@mipmap/ic_graph" />
+        app:srcCompat="@drawable/ic_graph" />
 
     <TextView
         android:id="@+id/statistiekenText"
@@ -80,7 +80,7 @@
         app:layout_constraintHorizontal_bias="0.868"
         app:layout_constraintStart_toEndOf="@+id/titleBierlijst"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/bewonersText"
