added new images, vGs image shows up weird

--- a/app/src/main/res/layout/activity_bierlijst.xml
+++ b/app/src/main/res/layout/activity_bierlijst.xml
@@ -64,7 +64,7 @@
         android:layout_marginTop="16dp"
         android:longClickable="true"
         android:onClick="stevenBier"
-        android:scaleType="centerCrop"
+        android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/IG_Sven"
         app:layout_constraintHorizontal_bias="1.0"
@@ -125,7 +125,7 @@
         android:layout_height="150dp"
         android:longClickable="true"
         android:onClick="thijsBier"
-        android:scaleType="centerInside"
+        android:scaleType="center"
         app:layout_constraintEnd_toStartOf="@+id/IG_Sven"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,7 +194,7 @@
         android:layout_marginTop="24dp"
         android:longClickable="true"
         android:onClick="svenBier"
-        android:scaleType="centerCrop"
+        android:scaleType="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleBierlijst"
@@ -336,7 +336,7 @@
         android:layout_marginTop="8dp"
         android:longClickable="true"
         android:onClick="etienneBier"
-        android:scaleType="centerCrop"
+        android:scaleType="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/IG_Sven"
         app:layout_constraintTop_toTopOf="@+id/IG_Sven"
