--- a/app/src/main/res/layout/activity_edit_bewoners.xml
+++ b/app/src/main/res/layout/activity_edit_bewoners.xml
@@ -78,7 +78,7 @@
             android:layout_height="150dp"
             android:longClickable="true"
             android:onClick="addSBEtienne"
-            android:scaleType="centerCrop"
+            android:scaleType="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/IG_SBSven"
             app:layout_constraintTop_toTopOf="@+id/IG_SBSven"
@@ -101,7 +101,7 @@
             android:layout_marginTop="30dp"
             android:longClickable="true"
             android:onClick="addSBSven"
-            android:scaleType="centerCrop"
+            android:scaleType="center"
             app:layout_constraintBottom_toTopOf="@+id/IG_SBRowin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.482"
@@ -145,7 +145,7 @@
             android:layout_height="150dp"
             android:longClickable="true"
             android:onClick="addSBThijs"
-            android:scaleType="centerCrop"
+            android:scaleType="center"
             app:layout_constraintEnd_toStartOf="@+id/IG_SBSven"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/IG_SBSven"
@@ -169,7 +169,7 @@
             android:layout_height="150dp"
             android:longClickable="true"
             android:onClick="addSBSteven"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="@+id/IG_SBSven"
             app:layout_constraintStart_toStartOf="@+id/IG_SBSven"
             app:layout_constraintTop_toTopOf="@+id/IG_SBRowin"
@@ -200,7 +200,7 @@
             android:layout_marginBottom="100dp"
             android:longClickable="true"
             android:onClick="addSBRowin"
-            android:scaleType="fitStart"
+            android:scaleType="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/IG_SBSteven"
             app:layout_constraintHorizontal_bias="0.497"
